# SpatialIndex

./: .gitignore  LICENSE.txt  README.rst  setup.cfg  setup.py
data/: railroads.shp  roads.dbf  roads.shx
doc/: api.rst  conf.py  develop.rst  index.rst  make.bat  quickstart.rst
doc/_build/doctrees/: api.doctree  develop.doctree  environment.pickle  index.doctree  indexation.doctree  motivation.doctree  quickstart.doctree
doc/_build/doctrees/modules/: spindex.core.data_providers.doctree  spindex.core.doctree  spindex.core.enclosing_geometry.doctree  spindex.core.spatial_index.doctree  spindex.doctree  (+2 more)
doc/_build/html/: .buildinfo  api.html  develop.html  genindex.html  index.html  indexation.html  motivation.html  objects.inv  py-modindex.html  quickstart.html  search.html  searchindex.js
doc/modules/: modules.rst  spindex.core.rst  spindex.core.spatial_index.rst  spindex.pandas.rst  spindex.rst
docs/: Makefile  conf.py  index.rst  indexation.rst  motivation.rst  quickstart.rst
docs/_templates/: class.rst
docs/modules/: spindex.core.data_providers.rst  spindex.core.enclosing_geometry.rst  spindex.core.spatial_joins.rst  spindex.rst
spindex/: pandas.py
spindex/core/: enclosing_geometry.py  spatial_index.py  spatial_joins.py
spindex/wrappers/: pandas.py
src/data/: railroads.dbf  railroads.shx
src/spindex/: __init__.py  build.py  envelope.py  joins.py  pandas.py  sjoin.py  str.py  tree.py
src/spindex/core/: data_providers.py  enclosing_geometry.py  spatial_index.py  spatial_joins.py
tests/: TrueKNN.ipynb  test_nearest.py  tests.py
(+8 files in other folders)
