[metadata]
name = spindex
version = attr: src.spindex.__version__
description = Pure Python fast spatial indexing library
long_description = file: README.md, CHANGELOG.rst, LICENSE.txt
keywords = spatial, indexe, geospatial, R-tree, sort-tile-recurse
license = MIT
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7

[options]
zip_safe = False
# include_package_data = True
package_dir=
    =src
packages=find:
install_requires =
  numpy

[options.packages.find]
where=src

[options.extras_require]
test = pytest; pytest-cov
joins = geopandas
