[metadata]
name = spindex
version = attr: src.spindex.__version__
description = Fast Vectorized Spatial Indexing
long_description = file: README.md, CHANGELOG.rst, LICENSE.txt
keywords = Indexing, Geospatial, STRTree, Search Tree, Merge, Join
license = MIT
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7

[options]
zip_safe = False
# include_package_data = True
package_dir=
    =src
packages=find:
install_requires =
  numpy

[options.packages.find]
where=src

[options.extras_require]
test = pytest; pytest-cov
joins = geopandas
